--- a/CalCalTracking/CalCalTracking/CalCalTracking.UWP/CalCalTracking.UWP.csproj
+++ b/CalCalTracking/CalCalTracking/CalCalTracking.UWP/CalCalTracking.UWP.csproj
@@ -127,6 +127,12 @@
       <SubType>Designer</SubType>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\CalCalTracking.PCL\CalCalTracking.PCL.csproj">
+      <Project>{8078a104-681c-4df5-aaf4-cbf6035ef60a}</Project>
+      <Name>CalCalTracking.PCL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
