--- a/CalCalTrackerWeb/CalCalTracker.Infrastructure.Core/CalCalTracker.Infrastructure.Core.csproj
+++ b/CalCalTrackerWeb/CalCalTracker.Infrastructure.Core/CalCalTracker.Infrastructure.Core.csproj
@@ -5,7 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CalCalTracker.Domain\CalCalTracker.Domain.csproj" />
+    <ProjectReference Include="..\CalCalTracker.Infrastructure\CalCalTracker.Infrastructure.csproj" />
+    <ProjectReference Include="..\CalCalTracker.Persistence.Core\CalCalTracker.Persistence.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dtos\" />
+    <Folder Include="Services\Interfaces\" />
   </ItemGroup>
 
 </Project>
